# BKBase

./: CMakeLists.txt  CMakeSettings.json  LICENSE  bk_buffer.c  bk_buffer.h  bk_data.c  bk_data.h  bk_export.h  bk_hashmap.c  bk_hashmap.h  bk_list.c  bk_platform.h  bk_stream.c  bk_stream.h  bk_types.h  bk_vector.c  bk_vector.h  main.cpp
include/: bk_buffer.h  bk_defines.h  bk_error.h  bk_hashmap.h  bk_list.h  bk_memory_pool.h  bk_platform.h  bk_stream.h  bk_vector.h
src/: bk_buffer.c  bk_hashmap.c  bk_list.c  bk_memory_pool.c  bk_stream.c  bk_vector.c
test/: bk_buffer_test.cpp  bk_data_test.cpp  bk_hashmap_test.cpp  bk_list_test.cpp  bk_stream_test.cpp  bk_unit_test_main.cpp  bk_vector_test.cpp  file_test_util.cpp  file_test_util.h
